# lilv

./: .clang-format  .clang-tidy  .clant.json  .git-blame-ignore-revs  .gitignore  .suppress.cppcheck  AUTHORS  ChangeLog  INSTALL.md  Makefile.am  NEWS  README  README.md  SConstruct  TODO  acinclude.m4  autogen.sh  autowaf.py  configure.ac  libslv2.pc.in  lilv.pc.in  lilv.ttl  meson.build  meson_options.txt  slv2.pc.in  slv2.ttl  waf  wscript
.reuse/: dep5
bindings/: lilv.i
bindings/bindings_test_plugin.lv2/: bindings_test_plugin.c  meson.build
bindings/python/: Makefile  conf.py  index.rst  lilv.py  lv2_apply.py  lv2_list.py  lv2_list_plugin_presets.py  lv2_list_presets.py  meson.build
bindings/test/: bindings_test_plugin.c  bindings_test_plugin.ttl.in  meson.build  test_api.py
bindings/test/python/: test_api.py
data/: Makefile.am  lv2.ttl
data/lv2core.lv2/: Makefile.am  lv2.ttl
debian/: Makefile.am  changelog  control  rules  shlibs.local
debian-sid/: control  copyright  rules
doc/: Doxyfile.in  Makefile.am  conf.py.in  index.rst  lv2_inspect.1  lv2_jack_host.1  lv2_list.1  lv2_simple_jack_host.1  lv2apply.1  lv2bench.1  lv2info.1  lv2jack.1  lv2ls.1  mainpage.dox  meson.build  overview.rst  plugins.rst  reference.doxygen.in  style.css  summary.rst  uis.rst  world.rst
doc/api/: meson.build
doc/c/: Doxyfile  Doxyfile.in  index.rst  meson.build  overview.rst  plugins.rst  uis.rst  world.rst  wscript
doc/c/api/: meson.build
doc/c/xml/: meson.build
doc/html/: meson.build
doc/singlehtml/: meson.build
doc/xml/: meson.build
examples/: Makefile.am
examples/hosts/: .jack_host.c.swp  Makefile.am  host.c  jack_host.c  lv2-midifunctions.h  test_host.c
examples/plugins/: Makefile.am
examples/plugins/Amp-onefile-slv2.lv2/: Makefile  amp.c  manifest.ttl
examples/plugins/Amp-slv2.lv2/: Makefile  amp.c  amp.ttl  manifest.ttl
examples/plugins/Amp-swh.lv2/: Makefile  amp.c  amp.ttl  manifest.ttl
hosts/: Makefile.am  event.lv2  jack_compat.c  jack_compat.h  lv2-midifunctions.h  lv2_event.h  lv2_event_helpers.h  lv2_jack_host.c  lv2_simple_jack_host.c  lv2_uri_map.h
include/: Makefile.am  lv2.h  lv2.ttl
include/lilv/: lilv.h  lilvmm.hpp
lilv/: lilv.h  lilvmm.hpp
meson/suppressions/: meson.build
scripts/: dox_to_sphinx.py
slv2/: Makefile.am  categories.h  category.h  collections.h  gui.h  library.h  lv2-gtk2gui.h  lv2.h  lv2_gui.h  lv2_ui.h  model.h  plugin.h  pluginclass.h  pluginclasses.h  pluginguiinstance.h  plugininstance.h  pluginlist.h  plugins.h  pluginui.h  pluginuiinstance.h  pluginuis.h  port.h  portsignature.h  private_types.h  query.h  scalepoint.h  scalepoints.h  slv2.h  slv2mm.hpp  stringlist.h  strings.h  template.h  types.h  ui.h  util.h  value.h  values.h  world.h
src/: .clang-tidy  Makefile.am  categories.c  category.c  collections.c  dylib.c  dylib.h  dynmanifest.c  filesystem.c  filesystem.h  instance.c  lib.c  library.c  lilv_config.h  lilv_internal.h  load_skimmer.c  load_skimmer.h  log.h  lv2_dyn_manifest.h  model.c  node.c  node_hash.c  node_hash.h  node_skimmer.c  node_skimmer.h  plugin.c  pluginclass.c  pluginclasses.c  pluginguiinstance.c  plugininstance.c  pluginlist.c  plugins.c  pluginui.c  pluginuiinstance.c  pluginuis.c  port.c  portsignature.c  private_types.h  query.c  query.h  (+24 more)
src/sratom/: sratom.c  sratom.h
src/zix/: common.h  tree.c  tree.h
swig/: Makefile.am  lilv.i  lv2_list.py  lv2_list.scm  slv2.i  slv2.setup
swig/chicken/: Makefile.am  lilv.setup  lv2_list.scm
swig/mzscheme/: Makefile.am
swig/python/: Makefile.am  lv2_apply.py  lv2_list.py
test/: .clang-tidy  lilv_cxx_test.cpp  lilv_test.c  lilv_test_uri_map.h  lilv_test_utils.c  lilv_test_utils.h  manifest.ttl  meson.build  slv2_test.c  test_bad_port_index.c  test_bad_port_symbol.c  test_classes.c  test_coverage.sh  test_discovery.c  test_filesystem.c  test_get_symbol.c  test_no_author.c  test_no_verify.c  test_plugin.c  test_plugin.ttl.in  test_port.c  test_preset.c  test_project.c  test_project_no_author.c  test_prototype.c  test_reload_bundle.c  test_replace_version.c  test_state.c  test_string.c  test_ui.c  test_util.c  test_value.c  test_verify.c  test_world.c  wscript
test/bad_syntax.lv2/: bad_syntax.c  meson.build  test_bad_syntax.c
test/cpp/: .clang-tidy  meson.build  test_lilv_hpp.cpp
test/failed_instantiation.lv2/: failed_instantiation.c  meson.build  test_failed_instantiation.c
test/failed_lib_descriptor.lv2/: failed_lib_descriptor.c  meson.build  test_failed_lib_descriptor.c
test/headers/: .clang-tidy  meson.build  test_headers.c
test/lib_descriptor.lv2/: lib_descriptor.c  meson.build  test_lib_descriptor.c
test/lint/: meson.build
test/lv2/core.lv2/: meson.build
test/missing_descriptor.lv2/: meson.build  missing_descriptor.c  test_missing_descriptor.c
test/missing_name.lv2/: meson.build  missing_name.c  test_missing_name.c
test/missing_plugin.lv2/: meson.build  missing_plugin.c  test_missing_plugin.c
test/missing_port.lv2/: meson.build  missing_port.c  test_missing_port.c
test/missing_port_name.lv2/: meson.build  missing_port_name.c  test_missing_port_name.c
test/new_version.lv2/: meson.build  new_version.c
test/old_version.lv2/: meson.build  old_version.c
test/test.lv2/: test.c
test/test_plugin.lv2/: meson.build  test_plugin.c
tools/: .clang-tidy  bench.h  lilv.bash_completion  lv2apply.c  lv2bench-plot.py  lv2bench.c  lv2info.c  lv2ls.c  meson.build  uri_table.h
utils/: Makefile.am  README  bench.h  ladspa2lv2.c  ladspa2lv2.cc  ladspa2lv2.cpp  lilv-bench.c  lilv.bash_completion  lilv_bench.c  lv2_inspect.c  lv2_jack_host.c  lv2_list.c  lv2apply.c  lv2bench.c  lv2info.c  lv2jack.c  lv2ls.c  slv2_bench.c  uri-map.lv2  uri_table.h
